@@ -65,6 +65,8 @@ Version 1.11.15+dev:
    * Fix bug #22134: Campaign prefix not used in mp campaign saves
    * Made the error messages sent to stderr when the core data dir is
      incorrectly set more helpful.
+   * Fix bug in Random Recruit Micro AI: the AI can now handle custom castle
+     terrain independent of its terrain code
 
 Version 1.11.15:
  * Graphics:
